--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,6 +10,7 @@
       "@component":["./src/component"],
       "@modules":["./src/modules"],
       "@api":["./src/api"],
+      "@utils":["./src/utils/notification"],
       
     },
     /* Bundler mode */
