--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
     "@loadable/component": "^5.16.4",
     "@tanstack/react-query": "^5.59.16",
     "antd": "^5.21.6",
+    "axios": "^1.7.7",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/axios": "^0.9.36",
     "@types/loadable__component": "^5.13.9",
     "@types/moment": "^2.11.29",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/react-icons": "^2.2.7",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
